--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
       </header>
-      <section class="cover container">
+      <section class="cover">
         <div class="cover__inner row justify-content-md-center">
           <h2 class="title col-md-8 col-lg-12 text-center">
             Share your holiday dreams
